# apex_bio_data_cleaning

./: .gitignore  README.md  add_matching_file_to_directory.py  apex_bio.tsv  apex_bio.xlsx  apex_bio_cleaned.tsv  apex_bio_original.xlsx  apex_bio_revised.tsv  beautifulsoup.ipynb  clean_data.py  cleaned_dataframe.ipynb  constants.py  data_cleaning.ipynb  data_vis.ipynb  explore_bad_data.ipynb  failed_cas.tsv  failed_iname.tsv  failed_smiles.tsv  file_name_for_mass_spectrometry.py  first_try.ipynb  generate_and_save_data_for_ms.py  generate_csv_who_doesnt_match_pubchem.py  generate_feature_list.py  individual_test_neg.mzbatch  individual_test_pos.mzbatch  mass_spectrometry.ipynb  mass_spectrometry.py  molecules.py  neg_batch_mode.py  oop.ipynb  out.csv  plate3_rk1.csv  plate3_rk1.tsv  plate_3_targets.csv  pos_batch_mode.py  pyproject.toml  test_OOP.ipynb  ~$apex_bio_original.xlsx
.ipynb_checkpoints/: data_vis-checkpoint.ipynb  pyproject-checkpoint.toml
problematic_apex_data/: failed_iname.tsv  no_matching_mass.tsv
problematic_data/: failed_smiles.tsv  invalid_smiles.tsv  multi_molecule.tsv
src/: generate_feature_list.py  mzmine_utils.py  neg_batch_mode.py  pos_batch_mode.py  summary.py
