[project]
name = "apexbio-data-cleaning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.3.6",
    "lxml>=5.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pubchempy>=1.0.4",
    "tqdm>=4.67.1",
]
