[project]
name = "fake-extract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cache-decorator>=2.2.0",
    "jupyterlab>=4.3.6",
    "molvs>=0.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pubchempy>=1.0.4",
    "rdkit>=2024.9.6",
    "tqdm>=4.67.1",
]
